CircuitBreaker-grpc/envoy/envoy.json
{
    "listeners": [
      {
        "address": "tcp://0.0.0.0:3000",
        "filters": [
          {
            "type": "read",
            "name": "http_connection_manager",
            "config": {
              "codec_type": "auto",
              "access_log": [{"path": "/dev/stdout"}],
              "stat_prefix": "ingress_http",
              "route_config": {
                "virtual_hosts": [
                  {
                    "name": "service",
                    "domains": ["*"],
                    "routes": [
                      {
                        "timeout_ms": 0,
                        "prefix": "/",
                        "cluster": "service_grpc"
                      }
                    ]
                  }
                ]
              },
              "filters": [
                {
                  "type": "decoder",
                  "name": "router",
                  "config": {}
                }
              ]
            }
          }
        ]
      }
    ],
    "admin": {
      "access_log_path": "/dev/stdout",
      "address": "tcp://0.0.0.0:8081"
    },
    "cluster_manager": {
      "clusters": [
        {
          "name": "service_grpc",
          "features": "http2",
          "connect_timeout_ms": 250,
          "type": "strict_dns",
          "lb_type": "round_robin",
          "hosts": [{"url": "tcp://server:8080"}],
          "circuit_breakers": {
            "default": {
              "max_requests": 3000,
              "max_retries": 1
            }
          }
        }
      ]
    }
  }
